# Blender

./: CameraControl.py  CameraControlGCODE.py  HGRigifyViseme.py  MPBFtoRigifyandMixamo.odp  README.md  RigifyFKIKSwitch.py  RigifyViseme.py  cameraChange.py  cameraControlScript.blend  cameraControlScript.blend1  cudaautorotoapp.py  faceRig.py  generateMatte.py  importFaceData.blend  importFaceData.blend1  importFaceRigify.py  panTiltControl.ino  resequenceAndLinkFilenames.c  resequenceFilenames.c  scriptingAutoRotoscopeOperator.blend
CameraRig/: PanTilt.blend  PanTiltAsmMounting.blend  PanTiltWithPlanetary.blend  README.md  VirtualCameraModel.blend  cameraRig.blend  pulleyWheelMount.blend  script.fountain  script.txt
CameraRig/Arduino/CMController/: CMController.ino  CNCShield.cpp  CNCShield.h
CameraRig/Arduino/PantTiltControl/: PantTiltControl.ino
FaceTracker/: CMakeLists.txt  Common.cmake  rpi.cmake
FaceTracker/Source/: FaceTracker.cpp  FaceTracker.h  FaceTracker.wxcp  FaceTracker_source_bitmaps.cpp  FaceTracker_source_bitmaps.xrc  MainFrame.cpp  MainFrame.h  bmpfromocvpanel.cpp  bmpfromocvpanel.h  keypoints.cpp  keypoints.h  ocvapp.cpp  ocvframe.cpp  ocvframe.h
Workflows/: 360SetGen.json  ClothesSwap.json  LTX_Video_text_to_video_volcano.json  LipSyncWithFaceSwapperReactor.json  MakeupExample.json  MusicGeneration.json  RotoTestSingleImage.json  RotoTestTwoPeople.json  SoundGeneration.json  TextToAvatarSequence.json  TextToSpeech.json  Upscale.json  audioForVideo.json  wav2lip fix.json  wav2lipImageSequence.json  workflow_faceswap.json
